chore: update typescript
Signed-off-by: Cory Rylan <cory@coryrylan.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,17 @@
 {
   "compilerOptions": {
-    "target": "es2019",
     "module": "esnext",
-    "moduleResolution": "node",
-    "lib": ["es2020", "dom"],
-    "emitDecoratorMetadata": false,
-    "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true,
+    "target": "es2022",
+    "lib": ["es2022"],
+    "types": ["node"],
+    "typeRoots": ["./node_modules/@types", "./src/types"],
     "declaration": true,
-    "alwaysStrict": true,
-    "noImplicitAny": false,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "strictFunctionTypes": true,
-    "noFallthroughCasesInSwitch": true,
-    "strictNullChecks": false,
-    "sourceMap": false,
-    "inlineSourceMap": false,
-    "importHelpers": true,
-    "rootDir": "./src",
+    "emitDeclarationOnly": true,
+    "outDir": "./dist",
+    "rootDir": "./",
     "baseUrl": "./",
-    "paths": {
-      "web-test-runner-performance": ["./dist/lib"],
-      "web-test-runner-performance/*": ["./dist/lib/*"]
-    }
-  },
-  "include": ["src/**/*.ts", "src/**/*.d.ts"],
-  "exclude": ["node_modules"]
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "isolatedModules": true
+  }
 }
