--- a/package.json
+++ b/package.json
@@ -2,20 +2,21 @@
   "name": "node-cli-starter",
   "version": "0.0.0",
   "description": "Basic starter kit for building Node CLI applications with TypeScript.",
-  "main": "./index.js",
-  "module": "./index.js",
-  "typings": "./index.d.ts",
+  "main": "./index.ts",
+  "module": "./index.ts",
   "type": "module",
+  "bin": {
+    "ncs": "./src/index.ts"
+  },
   "files": [
-    "*"
+    "src",
+    "package.json"
   ],
   "scripts": {
-    "start": "npm run build:watch & npm run node:watch",
-    "ci": "npm run clean && npm run build",
-    "clean": "del ./dist",
-    "build": "tsc --project ./tsconfig.lib.json && cpy ./package.json dist/lib/ && cpy ./README.md dist/lib/",
-    "node:watch": "nodemon ./dist/lib/index.js --path ./package.json",
-    "build:watch": "tsc --watch --project ./tsconfig.lib.json"
+    "start": "./src/index.ts",
+    "postinstall": "pnpm link --global",
+    "uninstall": "pnpm uninstall --global node-cli-starter",
+    "ci": "echo 'CI'"
   },
   "repository": {
     "type": "git",
@@ -33,10 +34,8 @@
   },
   "homepage": "https://github.com/coryrylan/node-cli-starter#readme",
   "devDependencies": {
-    "cpy-cli": "^3.1.1",
-    "del-cli": "^4.0.1",
-    "nodemon": "^2.0.15",
-    "typescript": "^4.5.4"
+    "@types/node": "^24.0.3",
+    "typescript": "~5.8.3"
   },
   "dependencies": {
     "fs-extra": "^10.0.0",
