--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "typescript": "~5.8.3"
   },
   "dependencies": {
+    "@inquirer/prompts": "7.6.0",
     "fs-extra": "^10.0.0",
     "yargs": "^17.3.1"
   }
